[package]
name = "bronze"
version = "0.1.0"
authors = ["Michael Coblenz <mcoblenz@umd.edu>"]
edition = "2018"
links = "libbronze"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiset = "0.0.5"
serial_test = "0.5.1"

[build-dependencies]
bindgen = "0.56.0"
