[package]
name = "bronze"
version = "0.1.0"
authors = ["Michael Coblenz <mcoblenz@umd.edu>"]
edition = "2018"
links = "libbronze"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["bronze_derive"]
enable_garbage_collection = []

[dependencies]
multiset = "0.0.5"
bronze_derive = { path = "../bronze_derive", version = "0.1.0", optional = true}

[build-dependencies]
bindgen = "0.56.0"

[dev-dependencies]
bronze_derive = { path = "../bronze_derive", version = "0.1.0" }
serial_test = "0.5.1"
backtrace = "0.3.56"