[package]
name = "bronze_derive"
version = "0.0.1"
authors = ["Michael Coblenz <mcoblenz@umd.edu>"]
description = "Plugin for bronze_gc to derive Trace and Finalize traits."
repository = "https://github.com/mcoblenz/Bronze"
homepage = "http://www.cs.umd.edu/~mcoblenz/"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["garbage", "collection", "gc"]
categories = ["memory-management"]
edition = "2018"

[lib]
name = "bronze_derive"
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
synstructure = "0.12"