[package]
name = "bronze_gc"
version = "0.1.0"
authors = ["Michael Coblenz <mcoblenz@umd.edu>"]
edition = "2018"
links = "libbronze"
license = "MIT"
description = "The Bronze garbage collector for Rust. This version only includes the API for creating and using GC references; it does not actually collect anything. For experimental purposes only."
homepage = "http://www.cs.umd.edu/~mcoblenz/"
repository = "https://github.com/mcoblenz/Bronze/"
keywords = ["garbage", "collection", "gc"]
categories = ["memory-management"]
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["bronze_derive"]
enable_garbage_collection = []

[dependencies]
multiset = "0.0.5"
bronze_derive = { path = "../bronze_derive", version = "0.1.0", optional = true}

[build-dependencies]
bindgen = "0.56.0"

[dev-dependencies]
bronze_derive = { path = "../bronze_derive", version = "0.1.0" }
serial_test = "0.5.1"
backtrace = "0.3.56"