[package]
name = "city_gc"
version = "0.1.0"
authors = ["Michael Coblenz <mcoblenz@cs.umd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
bronze_gc = { path = "../../bronze_gc" }
bronze_derive = { path = "../../bronze_derive" }
