[package]
name = "draw_gc"
version = "0.1.0"
authors = ["Michael Coblenz <mcoblenz@cs.cmu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cocoa-foundation = "0.1"
cocoa = "0.24.0"
winit = "0.24"
bronze = { path = "../../bronze" }


[dependencies.objc]
version = "0.2.4"
features = ["objc_exception"]